Added (incomplete) tutorial for parameter calibration workflow.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -243,6 +243,19 @@ eprint = {
 % Log-Likelihood (or unnormalized log posterior) emulation with GPs
 %  ---------------------------------------------------------------------------------------------------
 
+% Emulate unnormalized log-posterior. The focus is on sequential design schemes that take the form of a modified upper confidence 
+% bound optimization. Numerical examples (only in 1d and 3d) focused on parameter estimation for ODEs. Consider 
+% GP mean approximation of posterior density. 
+@misc{gp_surrogates_random_exploration,
+      title={Enhancing Gaussian Process Surrogates for Optimization and Posterior Approximation via Random Exploration}, 
+      author={Hwanwoo Kim and Daniel Sanz-Alonso},
+      year={2024},
+      eprint={2401.17037},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2401.17037}, 
+}
+
 % Emulate the likelihood. Propose a GP-accelerated MCMC scheme that tries to sample trajectories from the GP. 
 @article{trainDynamics,
 title = {Statistical inverse identification for nonlinear train dynamics using a surrogate model in a Bayesian framework},
