Progress on Python helper functions for analyzing GP emulator fit.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -610,6 +610,25 @@ pages = {},
 title = {Data-Driven Analysis and Common Proper Orthogonal Decomposition (CPOD)-Based Spatio-Temporal Emulator for Design Exploration}
 }
 
+% ---------------------------------------------------------------------------------------------------
+% Parameter estimation for dynamical models. 
+% ---------------------------------------------------------------------------------------------------
+
+% Discuss calibrating parameters to time averages of state variables. 
+@article{ESM_modeling_2pt0,
+author = {Schneider, Tapio and Lan, Shiwei and Stuart, Andrew and Teixeira, João},
+title = {Earth System Modeling 2.0: A Blueprint for Models That Learn From Observations and Targeted High-Resolution Simulations},
+journal = {Geophysical Research Letters},
+volume = {44},
+number = {24},
+pages = {12,396-12,417},
+keywords = {Earth system models, parameterizations, data assimilation, machine learning, Kalman inversion, Markov chain Monte Carlo},
+doi = {https://doi.org/10.1002/2017GL076101},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2017GL076101},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2017GL076101},
+abstract = {Abstract Climate projections continue to be marred by large uncertainties, which originate in processes that need to be parameterized, such as clouds, convection, and ecosystems. But rapid progress is now within reach. New computational tools and methods from data assimilation and machine learning make it possible to integrate global observations and local high-resolution simulations in an Earth system model (ESM) that systematically learns from both and quantifies uncertainties. Here we propose a blueprint for such an ESM. We outline how parameterization schemes can learn from global observations and targeted high-resolution simulations, for example, of clouds and convection, through matching low-order statistics between ESMs, observations, and high-resolution simulations. We illustrate learning algorithms for ESMs with a simple dynamical system that shares characteristics of the climate system; and we discuss the opportunities the proposed framework presents and the challenges that remain to realize it.},
+year = {2017}
+}
 
 
 % ---------------------------------------------------------------------------------------------------
