Added background section on parameter estimation for ODEs.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -177,6 +177,30 @@
 \newcommand{\mcmcIndex}{k}
 \newcommand{\indexMCMC}[2][\mcmcIndex]{{#2}_{#1}}
 
+% --------------------------------------------------------------------------------------------------
+% Dynamical Models. 
+% --------------------------------------------------------------------------------------------------
+
+\newcommand{\Time}{t}
+\newcommand{\state}{x}
+\newcommand{\odeRHS}{F}
+\newcommand{\timeStart}{\Time_0}
+\newcommand{\timeEnd}{\Time_1}
+\newcommand{\stateIC}{\state_{\circ}}
+\newcommand{\dimState}{S}
+\newcommand{\stateIndex}{s}
+\newcommand{\indexState}[2][\stateIndex]{{#2}^{({#1})}}
+\newcommand{\solutionOp}{\mathcal{S}}
+\newcommand{\obsOp}{\mathcal{H}}
+\newcommand{\timeIndex}{\mcmcIndex}
+\newcommand{\indexTime}[2][\timeIndex]{{#2}_{#1}}
+\newcommand{\NTimeStep}{K}
+
+
+
+
+
+
 
 
 
